--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <a href="#"><img src="assets/images/chat.svg" alt="Чат" /></a>
           </div>
           <div class="menu__items menu__profile">
-            <a href="#"><img src="assets/images/profile.svg" alt="Профиль" /></a>
+            <a href="#"
+              ><img src="assets/images/profile.svg" alt="Профиль"
+            /></a>
           </div>
           <nav class="menu__right">
             <div class="menu__items menu__divider--2">
